# astharbor

./: .clang-tidy  .gitignore  README.md  justfile  meson.build  meson.options
.github/workflows/: ci.yml  code-scanning.yml
docs/: architecture.md  cli.md  matcher-cookbook.md  mcp.md  rules.md
examples/cpp_sample/: main.cpp
include/astharbor/: analyzer.hpp  analyzer_config.hpp  cfg_reachability.hpp  compilation_db.hpp  config.hpp  dependency_collector.hpp  emitter.hpp  finding.hpp  fix.hpp  fix_applicator.hpp  result.hpp  rule.hpp  rule_registry.hpp  run_store.hpp
packaging/archlinux/: PKGBUILD
packaging/homebrew/: astharbor.rb
python/: .gitignore  pyproject.toml
python/astharbor_mcp/: __init__.py  cli_bridge.py  lsp.py  models.py  resources.py  server.py  tasks.py
python/tests/: test_integration.py  test_lsp.py  test_server.py
schemas/: finding.schema.json  fix.schema.json  run.schema.json
src/cli/: dependency_collector.hpp  main.cpp
src/core/: analyzer.cpp  compilation_db.cpp  rule_registry.cpp
src/emitters/: json_emitter.cpp  json_emitter.hpp  sarif_emitter.cpp  sarif_emitter.hpp  text_emitter.cpp  text_emitter.hpp
src/rules/best_practice/: explicit_single_arg_ctor.hpp  no_raw_new_delete.hpp
src/rules/bugprone/: abrupt_termination.hpp  assignment_in_condition.hpp  char_eof_comparison.hpp  copy_ctor_non_const.hpp  identical_expressions.hpp  ignored_return_value.hpp  iterator_invalidation.hpp  memcpy_overlap.hpp  narrow_wide_char_mismatch.hpp  sizeof_expression.hpp  sizeof_pointer_in_memfunc.hpp  suspicious_memset.hpp  suspicious_semicolon.hpp  swapped_arguments.hpp  unsafe_memory_operation.hpp  unsequenced_modification.hpp
src/rules/modernize/: use_nullptr.hpp  use_override.hpp  use_std_array.hpp
src/rules/performance/: for_loop_copy.hpp  pass_by_value_expensive.hpp  string_concat_in_loop.hpp
src/rules/portability/: c_style_variadic.hpp  pointer_integer_cast.hpp  vla_in_cxx.hpp
src/rules/readability/: const_return_type.hpp  container_size_empty.hpp  use_using_alias.hpp
src/rules/resource/: file_handle_leak.hpp  leak_on_throw.hpp
src/rules/security/: deprecated_crypto_call.hpp  integer_overflow_in_malloc.hpp  integer_signedness_mismatch.hpp  large_stack_array.hpp  missing_return_value_check.hpp  no_alloca.hpp  no_atoi.hpp  no_gets.hpp  no_rand.hpp  no_scanf_without_width.hpp  no_signal.hpp  no_sprintf.hpp  no_strcpy_strcat.hpp  no_system_call.hpp  signed_arith_in_alloc.hpp  strncpy_truncation.hpp  unchecked_allocation_result.hpp  unchecked_realloc.hpp  unsafe_printf_format.hpp  unsafe_temp_file.hpp
src/rules/ub/: c_style_cast_pointer_punning.hpp  casting_through_void.hpp  dangling_reference.hpp  delete_non_virtual_dtor.hpp  division_by_zero_literal.hpp  double_free_local.hpp  free_of_non_heap.hpp  implicit_widening_multiplication.hpp  missing_return_in_non_void.hpp  move_of_const.hpp  new_delete_array_mismatch.hpp  noreturn_function_returns.hpp  null_deref_after_check.hpp  null_deref_local.hpp  pointer_arithmetic_on_polymorphic.hpp  reinterpret_cast_type_punning.hpp  shift_by_negative.hpp  shift_past_bitwidth.hpp  sizeof_array_parameter.hpp  static_array_oob_constant.hpp  uninitialized_local.hpp  use_after_delete.hpp  use_after_free.hpp  use_after_move.hpp  virtual_call_in_ctor_dtor.hpp
subprojects/: catch2.wrap
tests/integration/c_fixture/: main.c
tests/integration/cpp_fixture/: compile_commands.json  main.cpp
tests/unit/: rule_test_utils.hpp  test_cli.cpp  test_rule_registry.cpp  test_rules.cpp
tools/: gen_rule_docs.py
