[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astharbor-mcp"
version = "1.0.0"
description = "FastMCP server for ASTHarbor"
requires-python = ">=3.11"
dependencies = [
    "mcp",
    "fastmcp",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.12.0",
    "ty",
]

[project.scripts]
astharbor-mcp = "astharbor_mcp.server:main"
astharbor-lsp = "astharbor_mcp.lsp:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.12.0",
    "ty",
]

[tool.ruff]
target-version = "py311"
line-length = 100
